fix trigger functions
they should be FKd
